# deepnog

./: .appveyor.yml  .flake8  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  dataset.py  deepnog.py  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  main.yml
.ipynb_checkpoints/: README-checkpoint.md
build_tools/: install-conda.sh  install-pip.sh  install-pytorch-nightly.sh  install-requirements.sh  meta.yaml
data/: README.md  classsize_filter.ipynb
deepnog/: README.md  __init__.py  client.py  dataset.py  deepnog.py  inference.py  io.py  sync.py  training.py  utils.py
deepnog/client/: __init__.py  client.py
deepnog/client/tests/: test_cli.py
deepnog/config/: deepnog_config.yml  deepnog_custom_config.yml  deepnog_default_config.yml
deepnog/data/: __init__.py  dataset.py  split.py
deepnog/data/tests/: test_data_split.py  test_dataset.py
deepnog/learning/: __init__.py  inference.py  training.py
deepnog/learning/tests/: test_inference.py  test_training.py
deepnog/models/: __init__.py  deepencoding.py  deepencoding_fast.py  deepfam.py  deepnog.py
deepnog/models/tests/: test_deepfam.py  test_deepnog.py
deepnog/tests/: __init__.py  test_cli.py  test_data_split.py  test_dataset.py  test_deepnog.py  test_inference.py  test_sync.py  test_training.py  test_utils.py  utils.py
deepnog/tests/data/: GCF_000007025.1.faa  GCF_000007025.1.faa.xz  test_split.csv  (+14 more)
deepnog/utils/: __init__.py  bio.py  config.py  imports.py  io_utils.py  logger.py  metrics.py  network.py  sync.py  utils.py
doc/: changelog.md  conf.py  github_link.py  index.rst
doc/development/: contributing.rst
doc/documentation/: api.rst  cli.rst  concepts.rst  documentation.rst  examples.rst  fileformats.rst  models.rst  training.rst  user_guide.rst
doc/getting_started/: citation.rst  example.rst  installation.rst
models/: deepencoding.py
requirements/: dev.txt  docs.txt  prod.txt  test.txt  travis_ubuntu.txt  win.txt
tests/: test_deepnog.py
tool/: README.md  dataset.py  deepNOG.py  deepnog.py
tool/models/: deepencoding.py
tool/tests/: test_dataset.py  test_deepnog.py
train/.ipynb_checkpoints/: README-checkpoint.md  singletask_cnn-checkpoint.ipynb
(+24 files in other folders)
